--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <p>
         <ul>
-          <li><a href="./page/ecma-script6.html" target="_blank">ES6新特性说明</a></li><li><a href="./page/http-request-types.html" target="_blank">关于HTTP的请求方式</a></li><li><a href="./page/better-web.html" target="_blank">web性能优化整理</a></li><li><a href="./page/article-build-tools.html" target="_blank">本blog文章新建工具</a></li>
+          <li><a href="./page/form-submit-proccess.html" target="_blank">表单提交过程分析</a></li><li><a href="./page/ecma-script6.html" target="_blank">ES6新特性说明</a></li><li><a href="./page/http-request-types.html" target="_blank">关于HTTP的请求方式</a></li><li><a href="./page/better-web.html" target="_blank">web性能优化整理</a></li><li><a href="./page/article-build-tools.html" target="_blank">本blog文章新建工具</a></li>
         </ul>
 
       </p>
